--- a/Assets/WebGLTemplates/Minimal Modified/index.html
+++ b/Assets/WebGLTemplates/Minimal Modified/index.html
@@ -6,7 +6,7 @@
     <title>Dan398. Level Up Canvas</title>
   </head>
   <body style="text-align: center; padding: 0; border: 0; margin: 0;">
-    <canvas id="unity-canvas" width={{{ WIDTH }}} height={{{ HEIGHT }}} tabindex="-1" style="width: 100vw; height: 100vh; background: {{{ BACKGROUND_FILENAME ? 'url(\'Build/' + BACKGROUND_FILENAME.replace(/'/g, '%27') + '\') center / cover' : BACKGROUND_COLOR }}}"></canvas>
+    <canvas id="unity-canvas" style="width: 100vw; height: 100vh;"></canvas>
     <script src="Build/{{{ LOADER_FILENAME }}}"></script>
     <script>
       createUnityInstance(document.querySelector("#unity-canvas"), {
@@ -29,7 +29,7 @@
         productName: {{{ JSON.stringify(PRODUCT_NAME) }}},
         productVersion: {{{ JSON.stringify(PRODUCT_VERSION) }}},
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
-        // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
+        devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
       });
     </script>
   </body>
